# Copyright (c) 2024 ROS2 OpenHarmony Port Project
# lifecycle_msgs - ROS2 lifecycle management interface types

import("//build/ohos.gni")
import("//gn_templates/ros2_library.gni")

_package_name = "lifecycle_msgs"

# ============================================================================
# lifecycle_msgs types:
#
# Messages:
#   State                  - Lifecycle state (id + label)
#   Transition             - Lifecycle transition (id + label)
#   TransitionDescription  - Full transition description
#   TransitionEvent        - Event when transition occurs
#
# Services:
#   ChangeState            - Request a state change
#   GetAvailableStates     - Get list of available states
#   GetAvailableTransitions - Get list of available transitions
#   GetState               - Get current state
# ============================================================================

# ============================================================================
# lifecycle_msgs C generator library
# ============================================================================
ros2_shared_library("lifecycle_msgs__rosidl_generator_c") {
  sources = [
    # Messages
    "src/msg/state__functions.c",
    "src/msg/transition__functions.c",
    "src/msg/transition_description__functions.c",
    "src/msg/transition_event__functions.c",
    # Services
    "src/srv/change_state__functions.c",
    "src/srv/get_available_states__functions.c",
    "src/srv/get_available_transitions__functions.c",
    "src/srv/get_state__functions.c",
  ]

  include_dirs = [ "include" ]

  deps = [
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_generator_c",
  ]

  defines = [ "ROSIDL_GENERATOR_C_BUILDING_DLL_${_package_name}" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# lifecycle_msgs type support C library
# ============================================================================
ros2_shared_library("lifecycle_msgs__rosidl_typesupport_c") {
  sources = [
    # Messages
    "src/msg/state__type_support.c",
    "src/msg/transition__type_support.c",
    "src/msg/transition_description__type_support.c",
    "src/msg/transition_event__type_support.c",
    # Services
    "src/srv/change_state__type_support.c",
    "src/srv/get_available_states__type_support.c",
    "src/srv/get_available_transitions__type_support.c",
    "src/srv/get_state__type_support.c",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":lifecycle_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_c:rosidl_typesupport_c",
    "//foundation/rosidl/rosidl_typesupport_introspection_c:rosidl_typesupport_introspection_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_C_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# lifecycle_msgs FastRTPS type support
# ============================================================================
ros2_shared_library("lifecycle_msgs__rosidl_typesupport_fastrtps_c") {
  sources = [
    # Messages
    "src/msg/state__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/transition__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/transition_description__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/transition_event__rosidl_typesupport_fastrtps_c.cpp",
    # Services
    "src/srv/change_state__rosidl_typesupport_fastrtps_c.cpp",
    "src/srv/get_available_states__rosidl_typesupport_fastrtps_c.cpp",
    "src/srv/get_available_transitions__rosidl_typesupport_fastrtps_c.cpp",
    "src/srv/get_state__rosidl_typesupport_fastrtps_c.cpp",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":lifecycle_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_fastrtps_c:rosidl_typesupport_fastrtps_c",
    "//vendor/fastdds/fastcdr:fastcdr",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_fastrtps_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_FASTRTPS_C_BUILDING_DLL_${_package_name}" ]

  cflags_cc = [ "-Wno-unused-parameter" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# lifecycle_msgs C++ type support
# ============================================================================
config("lifecycle_msgs_cpp_config") {
  include_dirs = [ "include" ]
}

ros2_shared_library("lifecycle_msgs__rosidl_typesupport_cpp") {
  sources = [
    # Messages
    "src/msg/state__type_support.cpp",
    "src/msg/transition__type_support.cpp",
    "src/msg/transition_description__type_support.cpp",
    "src/msg/transition_event__type_support.cpp",
    # Services
    "src/srv/change_state__type_support.cpp",
    "src/srv/get_available_states__type_support.cpp",
    "src/srv/get_available_transitions__type_support.cpp",
    "src/srv/get_state__type_support.cpp",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":lifecycle_msgs__rosidl_generator_c",
    "//foundation/rosidl/rosidl_runtime_cpp:rosidl_runtime_cpp",
    "//foundation/rosidl/rosidl_typesupport_cpp:rosidl_typesupport_cpp",
    "//foundation/rosidl/rosidl_typesupport_introspection_cpp:rosidl_typesupport_introspection_cpp",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_cpp",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_CPP_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# Package group target
# ============================================================================
group("lifecycle_msgs") {
  public_deps = [
    ":lifecycle_msgs__rosidl_generator_c",
    ":lifecycle_msgs__rosidl_typesupport_c",
    ":lifecycle_msgs__rosidl_typesupport_cpp",
    ":lifecycle_msgs__rosidl_typesupport_fastrtps_c",
  ]

  public_configs = [ ":lifecycle_msgs_cpp_config" ]
}
