# Copyright (c) 2024 ROS2 OpenHarmony Port Project
# rosgraph_msgs - ROS2 graph message types

import("//build/ohos.gni")
import("//gn_templates/ros2_library.gni")

_package_name = "rosgraph_msgs"

# ============================================================================
# rosgraph_msgs types:
#
# Messages:
#   Clock - Simulation/wall clock time message
# ============================================================================

# ============================================================================
# rosgraph_msgs C generator library
# ============================================================================
ros2_shared_library("rosgraph_msgs__rosidl_generator_c") {
  sources = [
    "src/msg/clock__functions.c",
  ]

  include_dirs = [ "include" ]

  deps = [
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_generator_c",
  ]

  defines = [ "ROSIDL_GENERATOR_C_BUILDING_DLL_${_package_name}" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# rosgraph_msgs type support C library
# ============================================================================
ros2_shared_library("rosgraph_msgs__rosidl_typesupport_c") {
  sources = [
    "src/msg/clock__type_support.c",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":rosgraph_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_c:rosidl_typesupport_c",
    "//foundation/rosidl/rosidl_typesupport_introspection_c:rosidl_typesupport_introspection_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_C_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# rosgraph_msgs FastRTPS type support
# ============================================================================
ros2_shared_library("rosgraph_msgs__rosidl_typesupport_fastrtps_c") {
  sources = [
    "src/msg/clock__rosidl_typesupport_fastrtps_c.cpp",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":rosgraph_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_fastrtps_c:rosidl_typesupport_fastrtps_c",
    "//vendor/fastdds/fastcdr:fastcdr",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_fastrtps_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_FASTRTPS_C_BUILDING_DLL_${_package_name}" ]

  cflags_cc = [ "-Wno-unused-parameter" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# rosgraph_msgs C++ type support
# ============================================================================
config("rosgraph_msgs_cpp_config") {
  include_dirs = [ "include" ]
}

ros2_shared_library("rosgraph_msgs__rosidl_typesupport_cpp") {
  sources = [
    "src/msg/clock__type_support.cpp",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":rosgraph_msgs__rosidl_generator_c",
    "//foundation/rosidl/rosidl_runtime_cpp:rosidl_runtime_cpp",
    "//foundation/rosidl/rosidl_typesupport_cpp:rosidl_typesupport_cpp",
    "//foundation/rosidl/rosidl_typesupport_introspection_cpp:rosidl_typesupport_introspection_cpp",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_cpp",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_CPP_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# Package group target
# ============================================================================
group("rosgraph_msgs") {
  public_deps = [
    ":rosgraph_msgs__rosidl_generator_c",
    ":rosgraph_msgs__rosidl_typesupport_c",
    ":rosgraph_msgs__rosidl_typesupport_cpp",
    ":rosgraph_msgs__rosidl_typesupport_fastrtps_c",
  ]

  public_configs = [ ":rosgraph_msgs_cpp_config" ]
}
